--- a/w261/w01/MIDS-W261-2015-HWK-Week01-rose.ipynb
+++ b/w261/w01/MIDS-W261-2015-HWK-Week01-rose.ipynb
@@ -320,7 +320,7 @@
     "\n",
     "Test the results against the same data set, classifying email records and comparing the results to known classifications.\n",
     "\n",
-    "**NOTE:** executing the next cell will overwrite the mapper script created in the earlier cell"
+    "**NOTE:** executing the next cell will overwrite the reducer script created in the earlier cell"
    ]
   },
   {
@@ -672,15 +672,6 @@
     "\n",
     "As seen in the table above, the SciKit-Learn Bernoulli Naive Bayes implementation did not perform as well as the Multinomial Naive Bayes implemenation. This can be ascribed to the fact that the Bernoulli approach uses a dichotomous value for the presence or absence of a term in an email record, whereas the Multinomial approach takes into consideration the number of times a term occurs, yielding a more accurate representation.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
