--- a/w261/w02/MIDS-W261-2015-HWK-Week02-rose.ipynb
+++ b/w261/w02/MIDS-W261-2015-HWK-Week02-rose.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 136,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
     "'''\n",
     "from __future__ import print_function\n",
     "from random import randint\n",
-    "minrange = 10\n",
+    "minrange = 0\n",
     "maxrange = 99\n",
     "randcount = 10000\n",
     "with open('randomnumbers.txt', 'w') as fout:\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 137,
    "metadata": {
     "collapsed": true
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false
    },
@@ -175,8 +175,49 @@
       "Deleted /out/out-2.1\n",
       "executing yarn task\n",
       "checking output directory: Found 2 items\n",
-      "-rw-r--r--   1 david supergroup          0 2015-09-12 14:36 /out/out-2.1/_SUCCESS\n",
-      "-rw-r--r--   1 david supergroup      40000 2015-09-12 14:36 /out/out-2.1/part-00000\n"
+      "-rw-r--r--   1 david supergroup          0 2015-09-14 18:52 /out/out-2.1/_SUCCESS\n",
+      "-rw-r--r--   1 david supergroup      39032 2015-09-14 18:52 /out/out-2.1/part-00000\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "0\t\n",
+      "cat: Unable to write to output stream.\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n",
+      "99\t\n"
      ]
     }
    ],
@@ -187,12 +228,18 @@
     "!printf \"preparing output directory\\n\"\n",
     "!hdfs dfs -rm -r -f -skipTrash /out/out-2.1\n",
     "!printf \"executing yarn task\\n\"\n",
+    "# specify comparator and option for sorting numerically\n",
     "!yarn jar /usr/local/Cellar/hadoop/2.7.0/libexec/share/hadoop/tools/lib/hadoop-streaming-2.7.0.jar \\\n",
+    "    -D mapred.output.key.comparator.class=org.apache.hadoop.mapred.lib.KeyFieldBasedComparator \\\n",
+    "    -D mapred.text.key.comparator.options=-n \\\n",
     "    -files ./map-2.1.py,./reduce-2.1.py \\\n",
     "    -mapper ./map-2.1.py -reducer ./reduce-2.1.py \\\n",
     "    -input /in/randomnumbers.txt -output /out/out-2.1\n",
     "!printf \"checking output directory: \"\n",
-    "!hdfs dfs -ls /out/out-2.1\n"
+    "!hdfs dfs -ls /out/out-2.1\n",
+    "!hdfs dfs -cat /out/out-2.1/part-00000 | head -n 20\n",
+    "!hdfs dfs -cat /out/out-2.1/part-00000 | tail -n 20\n",
+    "\n"
    ]
   },
   {
@@ -547,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false
    },
@@ -595,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -643,11 +690,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading enron email file\n",
+      "preparing output directory: Deleted /out/out-2.5\n",
+      "executing yarn task\n",
+      "no minimum frequency for word inclusion in vocabulary\n",
+      "correct: 100, incorrect: 0, training error: 0.0\n",
+      "checking output directory: Found 2 items\n",
+      "-rw-r--r--   1 david supergroup          0 2015-09-12 14:37 /out/out-2.5/_SUCCESS\n",
+      "-rw-r--r--   1 david supergroup       2672 2015-09-12 14:37 /out/out-2.5/part-00000\n"
+     ]
+    }
+   ],
    "source": [
     "# HW2.5. Using the Enron data from HW1 an in the  Hadoop MapReduce framework, \n",
     "# write  a mapper/reducer for a multinomial Naive Bayes Classifier that will \n",
@@ -671,12 +733,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "preparing output directory: Deleted /out/out-2.5\n",
+      "executing yarn task\n",
+      "setting minimum frequency for word inclusion in vocabulary to 3\n",
+      "prune: removed 3910 of 5739 total words due to frequency less than 3\n",
+      "correct: 97, incorrect: 3, training error: 0.03\n",
+      "checking output directory: Found 2 items\n",
+      "-rw-r--r--   1 david supergroup          0 2015-09-12 14:37 /out/out-2.5/_SUCCESS\n",
+      "-rw-r--r--   1 david supergroup       2672 2015-09-12 14:37 /out/out-2.5/part-00000\n"
+     ]
+    }
+   ],
    "source": [
     "# HW2.5. ... Also drop words with a \n",
     "# frequency of less than three (3). How does it affect the misclassifcation \n",
